@@ -3,6 +3,8 @@ AUX sagan.confd 337 RMD160 2171b4c918262a28601182dc4e063726ff44f47a SHA1 dad8d9b
 AUX sagan.init 318 RMD160 ac1350e804b4483862ad895dd86dca17c13db2c0 SHA1 84ea13f6cb1fcaf471d4d300c193a1ddc3355e35 SHA256 609bcbd445e28f5809ce1d176bb37daa4c7f3d3e4586033483ebf5005827c964
 AUX sysconfig_location.patch 531 RMD160 2a617e36d482437277fac8a0617072f1a6964d68 SHA1 2e308e59de8e48f8d58e4683957783fe9073fad4 SHA256 9acd1d09dbb975ce19ecb5d95538c17682fe0ed10b3b63a053fb1d3d38670982
 DIST sagan-0.1.0.tar.gz 169483 RMD160 c47579eb83f7b0832470a1edf544d3b8c75c7aca SHA1 c8995a355fb21211a26ae39184a450778a44e233 SHA256 f3aadcc477b057a22276d8287f71a02261bfd9a14fa0b0391b619855272783eb
+DIST sagan-0.1.4.tar.gz 158434 RMD160 d2e891dd433283c0d439082444887a2304628931 SHA1 862fd643f5bcffe3519aa91a1d737ff8177f653d SHA256 a769ffce4ccfd34585c579def13e5ce9ceabfaa61f4bee6b81796cf1ce213c05
 EBUILD sagan-0.1.0.ebuild 1879 RMD160 b3c35179a14b74f3cd8cb2620d74336eb83a1d26 SHA1 678ae1eb31d469a9dd58d0b1b1ef76023bb0f78e SHA256 8643129c6d6d76401857e11037f7964d9f052b6d10727b33b4a12c09010dc470
-MISC ChangeLog 327 RMD160 345518be890521744e6dfe4bf05fccaac2b34056 SHA1 3868df0c3cb18745bd66b8054f8e07ce9175049a SHA256 052292b66e7bc6e589b0201b5c406795e6be4f43056c08f64ebfd3dd27a33fc3
+EBUILD sagan-0.1.4.ebuild 1645 RMD160 78f116b9cbcc8b6e01893027ad5c680e8e30f350 SHA1 13f02e887c05a062c18c5df76194f8fdece34ac0 SHA256 a62345d82e4403bf369ac5565df93d77fb295a51c7b0c0d012e70a1ee6b59a38
+MISC ChangeLog 453 RMD160 db7897c5d7456680c0a47830c4dd33e8f1407227 SHA1 ebe4193b3f277ef68f401e8de3fbadf72286de16 SHA256 8f8fff1f85245b66a1c7cdf6994f7a21f10ac6c884705a9ee738ef6341f5e8f9
 MISC metadata.xml 426 RMD160 847e8281e1bf1f30267166b0e5bdfb157c707a19 SHA1 f1b468bb5f58cbf125cc1f57969c428aa1b754ae SHA256 192fee2affa8e3d363e51212f41bd8a88415464c7463226b64544fe970fbee29
